--- a/pong/package.json
+++ b/pong/package.json
@@ -1,13 +1,13 @@
 {
   "name": "pong",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "phaser": "^3.55.2",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
+    "build": "parcel build src/index.html",
     "start": "parcel src/index.html -p 8080"
   },
   "devDependencies": {
